<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_calllog_detail">Call history details</string>
    <string name="accessibility_contact_detail">Contact details</string>
    <string name="account_container_title">Imported from</string>
    <string name="account_default">Local</string>
    <string name="account_dual_sdn">SDN %s</string>
    <string name="account_dual_sim">SIM card %s</string>
    <string name="account_phone">Device-only, unsynced</string>
    <string name="account_sdn">SDN</string>
    <string name="account_sim">SIM card</string>
    <string name="account_type_format">%1$s contact</string>
    <string name="action_menu_overflow_description">Settings</string>
    <string name="actionbar_button_up_description">Back</string>
    <string name="activity_title_contacts_filter">Contacts to display</string>
    <string name="add_account">Add account</string>
    <string name="add_blacklist">Block</string>
    <string name="add_blacklist_dialog_message">Block calls and messages from this number?</string>
    <string name="add_blacklist_dialog_title">Block this phone number?</string>
    <string name="add_connection_button">Add connection</string>
    <string name="add_field">Add another field</string>
    <string name="add_field_toast">No more fields to add.</string>
    <string name="add_new_account">Add new account</string>
    <string name="add_xiaomi_account_dialog_btn">Use Mi Account</string>
    <string name="add_xiaomi_account_dialog_msg">Back up your contacts to your Mi Account to access them from anywhere!</string>
    <string name="add_xiaomi_account_dialog_title">Choose account</string>
    <string name="afternoon">Afternoon</string>
    <string name="aggregation_suggestion_edit_dialog_message">Switch to editing the same-name contact? Information you entered so far will be copied.</string>
    <string name="aggregation_suggestion_edit_dialog_title">Same name</string>
    <string name="aggregation_suggestion_join_dialog_message">Join the current contact with the selected contact?</string>
    <string name="all_list_empty">No contacts</string>
    <string name="am">AM</string>
    <string name="antispam_mark_my_contribution">Sharing flag info</string>
    <string name="app_label">Contacts Storage</string>
    <string name="attach_photo_dialog_title">Contact photo</string>
    <string name="audio_chat">Voice chat</string>
    <string name="auto_nickname">Auto</string>
    <string name="auto_record_yellowpage">Yellow pages</string>
    <string name="auto_set_nickname">Auto</string>
    <string name="back_description">Back</string>
    <string name="back_view_description">Go back</string>
    <string name="batch_delete">Delete batch</string>
    <string name="bind_simcard_default">Default SIM for calls</string>
    <string name="bind_simcard_menu">Set default SIM for calls</string>
    <string name="bind_simcard_no_dual">"Couldn't find dual SIM"</string>
    <string name="bind_simcard_not_set">Not set</string>
    <string name="bind_simcard_title">Default SIM for calls</string>
    <string name="bluetooth_connection_failed_toast">Bluetooth connection interrupted</string>
    <string name="blurbJoinContactDataWith">Choose the contact you want to merge with %s:</string>
    <string name="btn_split_contact">Separate</string>
    <string name="button_cancel_scan">Stop</string>
    <string name="button_scan">Rescan</string>
    <string name="caching_vcard_message">Caching vCard to device…</string>
    <string name="callDetailTitle">Call details</string>
    <string name="call_assistant">Call %s</string>
    <string name="call_callback">Call callback</string>
    <string name="call_car">Call car</string>
    <string name="call_company_main">Call company main</string>
    <string name="call_custom">Call %s</string>
    <string name="call_disambig_title">Choose number</string>
    <string name="call_fax_home">Call home fax</string>
    <string name="call_fax_work">Call work fax</string>
    <string name="call_feature_vilte">ViLTE</string>
    <string name="call_feature_volte">VoLTE</string>
    <string name="call_feature_vowifi">VoWiFi</string>
    <string name="call_home">Call home</string>
    <string name="call_isdn">Call ISDN</string>
    <string name="call_main">Call main</string>
    <string name="call_mms">Call MMS</string>
    <string name="call_mobile">Call mobile</string>
    <string name="call_other">Call</string>
    <string name="call_other_fax">Call fax</string>
    <string name="call_pager">Call pager</string>
    <string name="call_radio">Call radio</string>
    <string name="call_record_add_numbers">Add phone numbers</string>
    <string name="call_record_auto_always">All calls</string>
    <string name="call_record_auto_scenario_title">Recorded calls</string>
    <string name="call_record_auto_summary">Record calls automatically</string>
    <string name="call_record_auto_title">Record automatically</string>
    <string name="call_record_auto_unknown_number">Unknown number</string>
    <string name="call_record_auto_whitelist">Selected phone numbers</string>
    <string name="call_record_content_search">Voice call search</string>
    <string name="call_record_content_search_summary">Record and transcribe calls automatically to be able to find the calls during which certain words were mentioned</string>
    <string name="call_record_content_summary">"To protect your privacy, audio recordings of your calls along with transcribed text will be encrypted and stored on your device locally. Other apps won't be able to access these items."</string>
    <string name="contacts_unavailable_add_account">Sign in to an account</string>
    <string name="date_picker_label_day" />
    <string name="date_picker_label_month" />
    <string name="date_picker_label_year" />
    <string name="date_year_toggle">Provide a year</string>
    <string name="device_other_guide">Other device supports bluetooth?</string>
    <string name="display_options_sort_list_by">Sort list by</string>
    <string name="display_options_view_names_as">View contact names as</string>
    <string name="display_sim_contacts">Show SIM contacts</string>
    <string name="export_to_sdcard">Export to storage</string>
    <string name="export_to_sim">Export to SIM card</string>
    <string name="export_to_sim2">Export to SIM card 2</string>
    <string name="import_from_sdcard">Import from storage</string>
    <string name="import_from_sim">Import from SIM card</string>
    <string name="import_from_sim2">Import from SIM card 2</string>
    <string name="keep_local_btn">"Use device's internal storage"</string>
    <string name="menu_bar_group_add">Add</string>
    <string name="menu_bar_group_delete">Delete</string>
    <string name="menu_bar_group_rename">Rename</string>
    <string name="menu_bar_group_sms">SMS</string>
    <string name="menu_new_favorite_action_bar">Add to favorites</string>
    <string name="menu_new_group_action_bar">New</string>
    <string name="multi_select">Select</string>
    <string name="my_phone_not_provider_bluetooth">No</string>
    <string name="my_phone_provider_bluetooth">Yes</string>
    <string name="nickname_picker_name_column">Contact name</string>
    <string name="nickname_picker_nickname_column">Title</string>
    <string name="noAccounts">To create groups you need an account.</string>
    <string name="option_delete_contact">Delete</string>
    <string name="option_edit_contact">Edit</string>
    <string name="option_not_in_group">Remove</string>
    <string name="option_not_star">Remove from favorites</string>
    <string name="option_view_contact">View</string>
    <string name="preference_contacts_filter">Configure contact lists</string>
    <string name="preference_contacts_more">Organize contacts</string>
    <string name="preference_display_contact">Display options</string>
    <string name="preference_export">Export</string>
    <string name="preference_import">Import</string>
    <string name="preference_import_export_title">Import/Export contacts</string>
    <string name="preference_other">Other</string>
    <string name="preference_privacy_policy_title">Privacy Policy</string>
    <string name="preference_privacy_settings_title">Privacy</string>
    <string name="preference_remove_duplicate">Merge duplicate contacts</string>
    <string name="privacy_settings_blue_scan_connect">Connect to nearby devices</string>
    <string name="privacy_settings_call_phone">Make calls</string>
    <string name="privacy_settings_call_phone_description">For making calls through Home screen shortcuts</string>
    <string name="privacy_settings_phone_position">Location</string>
    <string name="privacy_settings_phone_position_description">For importing contacts from other devices via Bluetooth</string>
    <string name="privacy_settings_read_call_log">Access call history</string>
    <string name="privacy_settings_read_call_log_description">For viewing call history</string>
    <string name="privacy_settings_read_contacts">Access contacts</string>
    <string name="privacy_settings_read_contacts_description">For viewing contacts</string>
    <string name="privacy_settings_read_phone_state">Access device info</string>
    <string name="privacy_settings_read_phone_state_description">For accessing SIM info</string>
    <string name="privacy_settings_read_write_phone">Access storage</string>
    <string name="privacy_settings_read_write_phone_description">For adding profile photos and importing vCards</string>
    <string name="privacy_settings_take_photo_record_video">Take photos and record videos</string>
    <string name="privacy_settings_take_photo_record_video_description">For taking profile photos</string>
    <string name="privacy_settings_write_call_log">Edit call history</string>
    <string name="privacy_settings_write_call_log_description">For editing call history</string>
    <string name="privacy_settings_write_contacts">Edit contacts</string>
    <string name="privacy_settings_write_contacts_description">For managing contacts</string>
    <string name="share_visible_contacts">Share contacts</string>
</resources>