<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_import" android:key="pref_key_import">
        <PreferenceScreen android:title="@string/import_from_sdcard" android:key="pref_key_import_from_sdcard" />
        <miuix.preference.TextPreference android:title="@string/import_from_sim" android:key="pref_key_import_from_sim" />
        <miuix.preference.TextPreference android:title="@string/import_from_sim2" android:key="pref_key_import_from_sim2" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_export" android:key="pref_key_export">
        <PreferenceScreen android:title="@string/export_to_sdcard" android:key="pref_key_export_to_sdcard" />
        <miuix.preference.TextPreference android:title="@string/export_to_sim" android:key="pref_key_export_to_sim" />
        <miuix.preference.TextPreference android:title="@string/export_to_sim2" android:key="pref_key_export_to_sim2" />
        <PreferenceScreen android:title="@string/share_visible_contacts" android:key="pref_key_share_visible_contacts" />
    </PreferenceCategory>
</PreferenceScreen>