<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceScreen android:title="@string/preference_import_export_title" android:key="pref_key_import_export" />
    <PreferenceCategory android:title="@string/preference_display_contact" android:key="pref_key_display">
        <CheckBoxPreference android:persistent="false" android:title="@string/display_sim_contacts" android:key="pref_key_display_sim_contacts" android:defaultValue="true" />
        <miuix.preference.TextPreference android:title="@string/preference_contacts_filter" android:key="pref_key_contact_filter" />
        <com.android.contacts.preference.SortOrderPreference android:title="@string/display_options_sort_list_by" android:key="sortOrder" android:dialogTitle="@string/display_options_sort_list_by" />
        <com.android.contacts.preference.DisplayOrderPreference android:title="@string/display_options_view_names_as" android:key="displayOrder" android:dialogTitle="@string/display_options_view_names_as" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_contacts_more" android:key="pref_key_contacts">
        <PreferenceScreen android:title="@string/preference_remove_duplicate" android:key="pref_key_remove_duplicate_contact" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_other" android:key="pref_key_other">
        <PreferenceScreen android:title="@string/preference_privacy_policy_title" android:key="pref_key_privacy_policy" />
        <PreferenceScreen android:title="@string/preference_privacy_settings_title" android:key="pref_key_privacy_setting" />
    </PreferenceCategory>
</PreferenceScreen>