<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/option_view_contact" android:title="@string/option_view_contact" />
    <item android:id="@id/option_edit_contact" android:title="@string/option_edit_contact" />
    <item android:id="@id/option_star" android:title="@string/menu_new_favorite_action_bar" />
    <item android:id="@id/option_not_in_group" android:title="@string/option_not_in_group" />
    <item android:id="@id/option_not_star" android:title="@string/option_not_star" />
    <item android:id="@id/option_delete_contact" android:title="@string/option_delete_contact" />
    <item android:id="@id/option_delete_batch" android:visible="false" android:menuCategory="system" android:title="@string/multi_select" />
</menu>