<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/parent" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <miuix.pickerwidget.widget.NumberPicker android:id="@id/type" android:focusable="true" android:focusableInTouchMode="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <miuix.pickerwidget.widget.NumberPicker android:id="@id/month" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/date_picker_label_month" android:layout_weight="1.0" />
        <miuix.pickerwidget.widget.NumberPicker android:id="@id/day" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/date_picker_label_day" android:layout_weight="1.0" />
        <miuix.pickerwidget.widget.NumberPicker android:id="@id/year" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/date_picker_label_year" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/container_year_toggle" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="30.0dip" android:paddingEnd="30.0dip">
        <TextView android:textAppearance="@style/TextAppearance.Dialog.PreferenceList" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/date_year_toggle" android:layout_weight="1.0" />
        <miuix.slidingwidget.widget.SlidingButton android:id="@id/year_toggle" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>