<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="@style/Miuix.AppCompat.TextAppearance.Widget.EditText" android:paddingTop="@dimen/device_other_text_margin_vertical" android:paddingBottom="@dimen/device_other_text_margin_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/device_other_guide" android:paddingStart="@dimen/device_other_text_margin_horizontal" android:paddingEnd="@dimen/device_other_text_margin_horizontal" />
    <RadioGroup android:orientation="vertical" android:id="@id/radio_group_other_phone" android:padding="12.0dip" android:paddingTop="@dimen/device_other_text_margin_vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" android:paddingStart="@dimen/device_other_radio_margin_horizontal" android:paddingEnd="@dimen/device_other_radio_margin_horizontal">
        <RadioButton android:textAppearance="@style/Widget.CompoundButton.RadioButton" android:textSize="@dimen/device_other_radio_text_size" android:textColor="@drawable/device_btn_text" android:gravity="center_vertical" android:id="@id/radio_yes" android:background="@drawable/device_btn_bg" android:layout_width="fill_parent" android:layout_height="52.0dip" android:text="@string/my_phone_provider_bluetooth" android:fontFamily="mipro-medium" />
        <RadioButton android:textAppearance="@style/Widget.CompoundButton.RadioButton" android:textSize="@dimen/device_other_radio_text_size" android:textColor="@drawable/device_btn_text" android:gravity="center_vertical" android:id="@id/no_bluetooth" android:background="@drawable/device_btn_bg" android:layout_width="fill_parent" android:layout_height="52.0dip" android:layout_marginTop="10.0dip" android:text="@string/my_phone_not_provider_bluetooth" android:fontFamily="mipro-medium" />
    </RadioGroup>
    <LinearLayout android:orientation="horizontal" android:id="@id/bottom_action" android:paddingLeft="@dimen/bottom_button_padding" android:paddingRight="@dimen/bottom_button_padding" android:paddingBottom="@dimen/bottom_button_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:gravity="center" android:id="@id/btn_cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@android:string/cancel" android:layout_weight="1.0" style="?android:buttonBarButtonStyle" />
        <Button android:gravity="center" android:id="@id/btn_next" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@android:string/ok" android:layout_weight="1.0" style="?buttonBarDefaultButtonStyle" />
    </LinearLayout>
</LinearLayout>